<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    tools:context=".MenuActivity"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:text="@string/label_welcome"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />
    <Button
        android:id="@+id/btnCreateAppointment"
        android:layout_width="match_parent"
        android:text="@string/btn_create_appoinments"
        android:layout_marginTop="12dp"
        android:textColor="@color/whiteTransparent"
        android:drawableStart="@drawable/ic_add_circle"
        style="@style/MenuButton"
        />

    <Button
        android:id="@+id/btnMyAppointments"
        android:layout_width="match_parent"
        android:text="@string/btn_my_appointments"
        android:layout_marginTop="12dp"
        android:textColor="@color/whiteTransparent"
        android:drawableStart="@drawable/ic_schedule"
        style="@style/MenuButton"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:text="@string/btn_log_out"
        android:layout_marginTop="12dp"
        android:textColor="@color/whiteTransparent"
        android:drawableStart="@drawable/ic_power_off"
        style="@style/MenuButton"/>

    <TextView
        android:id="@+id/tvGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:layout_marginBottom="18dp"
        android:text="@string/label_go_to_register" />

</LinearLayout>