<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/white"
        android:layout_weight="1"
        android:text="@string/label_login"
        android:gravity="center_horizontal"
    android:background="@drawable/bg_gradient"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="14dp"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_password"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_ingresar"
            android:layout_marginTop="12dp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/whiteTransparent"/>

        <TextView
            android:id="@+id/tvGoToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:layout_marginBottom="18dp"
            android:text="@string/label_go_to_register" />

    </LinearLayout>




</LinearLayout>