<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    tools:context=".CreateAppointmentActivity"
    android:gravity="center"
    android:animateLayoutChanges="true"
    android:padding="16dp">

    <TextView
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:text="@string/label_create_appointment"
        android:gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvStep1"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:elevation="8dp"
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_description"/>

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_specialty"/>

            <Spinner
                android:id="@+id/spinnerSpecialties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_type"/>

            <RadioGroup
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <RadioButton
                    android:id="@+id/rdbOne"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type1"/>
                <RadioButton
                    android:id="@+id/rdbTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type2"/>
                <RadioButton
                    android:id="@+id/rdbThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type3"/>
            </RadioGroup>

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:text="@string/btn_next"
                android:layout_marginTop="12dp"
                android:textColor="@color/whiteTransparent"
                android:drawableEnd="@drawable/ic_navigate_next"
                style="@style/MenuButton"
                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvStep2"
        android:visibility="gone"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:elevation="8dp"
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_doctor"/>

                <Spinner
                    android:id="@+id/spinnerDoctors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></Spinner>


                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_scheduled_date"/>

                <EditText
                    android:id="@+id/etScheduledDate"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date"
                    android:onClick="onClickScheduledDate"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/radioGroupLeft"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8:00 AM"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8:30 AM"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/radioGroupRight"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8:00 AM"/>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8:30 AM"/>

                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btnConfirmAppointment"
                    android:layout_width="match_parent"
                    android:text="@string/btn_confirm"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/whiteTransparent"
                    android:drawableEnd="@drawable/ic_check"
                    style="@style/MenuButton"
                    />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>


</LinearLayout>